--- a/styles/style.css
+++ b/styles/style.css
@@ -69,3 +69,14 @@ footer {
     grid-template-columns: 1fr 1fr;
     text-align: center;
 }
+
+/*ESTILOS FORMS REGISTRO*/
+
+.form_container {
+    padding-bottom: 1%;
+    display: grid;
+    justify-content: center;
+    gap: 5px;
+}
+
+
