estilo en las paginas del nav

--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,7 @@ footer {
     display: grid;
     justify-content: center;
     gap: 5px;
+    padding-top: 2%;
 }
 
 
@@ -107,4 +108,8 @@ footer {
     margin-bottom: 20px;
 }
 
-
+.title-page {
+    font-size: 30px;
+    text-align: center;
+    padding-top: 2%;
+}
